--- a/lesson2/childbook.html
+++ b/lesson2/childbook.html
@@ -6,7 +6,7 @@
     <title>CHILDBOOK</title>
 </head>
 <body>
-    <img src="C:\Users\пк\Desktop\homework\lesson2\img\car90.jpeg"><!--Выбор пал на формат jpeg с качеством 90, поскольку в сравнении с форматом png качество практически не меняется и размер картинки меньше в два раза.-->
+    <img src="https://raw.githubusercontent.com/MasterAkane/homework/master/lesson2/img/car90.jpeg"><!--Выбор пал на формат jpeg с качеством 90, поскольку в сравнении с форматом png качество практически не меняется и размер картинки меньше в два раза.-->
     <p>За рулём сижу довольный &#8211;<br>
        Ездить просто и легко!<br>
        Только руль чуть-чуть огромный<br>
