--- a/lesson2/childbook.html
+++ b/lesson2/childbook.html
@@ -6,19 +6,19 @@
     <title>CHILDBOOK</title>
 </head>
 <body>
-    <img src="C:\Users\пк\Desktop\homework\lesson2\img\car90.jpeg"><!--Выбор пал на формат jpeg с качеством 90, поскольку в сравнении с форматом png качество практически не меняется и размер картинки меньше в два раза.-->
+    <img src="C:\Users\пк\Desktop\homework\lesson2\img\car90.jpeg" alt="car"><!--Выбор пал на формат jpeg с качеством 90, поскольку в сравнении с форматом png качество практически не меняется и размер картинки меньше в два раза.-->
     <p>За рулём сижу довольный &#8211;<br>
        Ездить просто и легко!<br>
        Только руль чуть-чуть огромный<br>
        И педали далеко.<br></p>
-    <img src="C:\Users\пк\Desktop\homework\lesson2\img\train90.jpeg"><!--Выбор пал на jpeg с качеством 90, поскольку в сравнении с форматом png качество практически не меняется, а размер меньшше в 3 раза.-->
+    <img src="C:\Users\пк\Desktop\homework\lesson2\img\train90.jpeg" alt="train"><!--Выбор пал на jpeg с качеством 90, поскольку в сравнении с форматом png качество практически не меняется, а размер меньшше в 3 раза.-->
     <p>Мне купили <strong>паровозик,</strong><br>
        Сразу два вогона возит.<br>
        Я включу его, и он<br>
        За собой везет вагон.<br>
        Вот бы мне в нём прокатиться,<br>
        Только жаль &#8211; не поместиться.<br></p>
-    <img src="C:\Users\пк\Desktop\homework\lesson2\img\paintgif.gif"><!--Использую формат gif, поскольку в самом изображении используется всего 3 цвета, что достаточно для этого формата и нецелесообразно применять более ёмкие форматы. -->
+    <img src="C:\Users\пк\Desktop\homework\lesson2\img\paintgif.gif" alt="paint"><!--Использую формат gif, поскольку в самом изображении используется всего 3 цвета, что достаточно для этого формата и нецелесообразно применять более ёмкие форматы. -->
     <p>Нарисую я в альбоме<br>
        <i>Голубое</i> море,<br>
        <i>Белый парус</i> над волною<br>
